RESOLVED FIXED 175911
Fix -Wunused-lambda-capture warnings in WebKit with new clang compiler
https://bugs.webkit.org/show_bug.cgi?id=175911
Summary Fix -Wunused-lambda-capture warnings in WebKit with new clang compiler
David Kilzer (:ddkilzer)
Reported 2017-08-23 16:14:37 PDT
Fix -Wunused-lambda-capture warnings in WebKit with new clang compiler. <rdar://problem/33667497>
Attachments
Patch (2.92 KB, patch)
2017-08-23 16:16 PDT, David Kilzer (:ddkilzer)
no flags
Patch v2 (3.50 KB, patch)
2017-08-25 16:17 PDT, David Kilzer (:ddkilzer)
no flags
David Kilzer (:ddkilzer)
Comment 1 2017-08-23 16:16:02 PDT
David Kilzer (:ddkilzer)
Comment 2 2017-08-23 16:17:30 PDT
Comment on attachment 318936 [details] Patch And it's time to update my local repository.
David Kilzer (:ddkilzer)
Comment 3 2017-08-25 16:17:42 PDT
Created attachment 319110 [details] Patch v2
WebKit Commit Bot
Comment 4 2017-08-25 16:59:38 PDT
Comment on attachment 319110 [details] Patch v2 Clearing flags on attachment: 319110 Committed r221215: <http://trac.webkit.org/changeset/221215>
WebKit Commit Bot
Comment 5 2017-08-25 16:59:40 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.