Fix -Wunused-lambda-capture warnings in WebKit with new clang compiler <https://webkit.org/b/175911> <rdar://problem/33667497>

Reviewed by Alex Christensen.

* NetworkProcess/cache/CacheStorageEngine.cpp:
(WebKit::CacheStorage::Engine::retrieveCaches): Remove unused
lambda capture for 'this'.
(WebKit::CacheStorage::Engine::putRecords): Remove unused
lambda capture for 'cacheIdentifier'.
* NetworkProcess/cache/CacheStorageEngineConnection.cpp:
(WebKit::CacheStorageEngineConnection::records): Ditto.


Canonical link: https://commits.webkit.org/192662@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@221215 268f45cc-cd09-0410-ab3c-d52691b4dbfc